--- a/HitomiScrollViewerLib/Views/ViewPageViews/ImageCollectionPanel.xaml
+++ b/HitomiScrollViewerLib/Views/ViewPageViews/ImageCollectionPanel.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<StackPanel
+<UserControl
     x:Class="HitomiScrollViewerLib.Views.ViewPageViews.ImageCollectionPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,7 +8,11 @@
     mc:Ignorable="d"
     xmlns:models="using:HitomiScrollViewerLib.Models"
     xmlns:entities="using:HitomiScrollViewerLib.Entities"
-    FlowDirection="{x:Bind models:CommonSettings.Main.FlowDirectionModel.Value, Mode=OneWay}"
-    HorizontalAlignment="Center"
     >
-</StackPanel>
+    <Viewbox>
+        <StackPanel x:Name="MainStackPanel"
+                    FlowDirection="{x:Bind models:CommonSettings.Main.FlowDirectionModel.Value, Mode=OneWay}"
+                    Orientation="Horizontal"
+                    />
+    </Viewbox>
+</UserControl>
