--- a/HitomiScrollViewerLib/Views/ViewPageViews/ImageCollectionPanel.xaml
+++ b/HitomiScrollViewerLib/Views/ViewPageViews/ImageCollectionPanel.xaml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <UserControl
+    x:Name="Root"
     x:Class="HitomiScrollViewerLib.Views.ViewPageViews.ImageCollectionPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,11 +9,40 @@
     mc:Ignorable="d"
     xmlns:models="using:HitomiScrollViewerLib.Models"
     xmlns:entities="using:HitomiScrollViewerLib.Entities"
+    xmlns:dtss="using:HitomiScrollViewerLib.DataTemplateSelectors"
     >
     <Viewbox>
-        <StackPanel x:Name="MainStackPanel"
-                    FlowDirection="{x:Bind models:CommonSettings.Main.FlowDirectionModel.Value, Mode=OneWay}"
-                    Orientation="Horizontal"
-                    />
+        <ListView ItemsSource="{x:Bind ViewModel.ImageInfos}">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsStackPanel FlowDirection="{Binding ViewModel.CommonSettings.FlowDirectionModel.Value, ElementName=Root, Mode=OneWay}"
+                                     Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+            <ListView.ItemTemplateSelector>
+                <dtss:ImageDataTemplateSelector>
+                    <dtss:ImageDataTemplateSelector.PlayableGalleryImageTemplate>
+                        <DataTemplate x:DataType="entities:ImageInfo">
+                            <WebView2 IsHitTestVisible="False"
+                              CoreWebView2Initialized="WebView2_CoreWebView2Initialized"
+                              Tag="{x:Bind}">
+                            </WebView2>
+                        </DataTemplate>
+                    </dtss:ImageDataTemplateSelector.PlayableGalleryImageTemplate>
+                    <dtss:ImageDataTemplateSelector.GalleryImageTemplate>
+                        <DataTemplate x:DataType="entities:ImageInfo">
+                            <Image>
+                                <Image.Source>
+                                    <BitmapImage UriSource="{x:Bind ImageFilePath}"></BitmapImage>
+                                </Image.Source>
+                            </Image>
+                        </DataTemplate>
+                    </dtss:ImageDataTemplateSelector.GalleryImageTemplate>
+                </dtss:ImageDataTemplateSelector>
+            </ListView.ItemTemplateSelector>
+            <ListView.ItemContainerTransitions>
+                <TransitionCollection/>
+            </ListView.ItemContainerTransitions>
+        </ListView>
     </Viewbox>
 </UserControl>
