--- a/HitomiScrollViewerLib/Views/ViewPageViews/GalleryTabViewItem.xaml
+++ b/HitomiScrollViewerLib/Views/ViewPageViews/GalleryTabViewItem.xaml
@@ -10,7 +10,6 @@
     xmlns:models="using:HitomiScrollViewerLib.Models"
     xmlns:vpvms="using:HitomiScrollViewerLib.ViewModels.ViewPageVMs"
     xmlns:vpviews="using:HitomiScrollViewerLib.Views.ViewPageViews"
-    xmlns:entities="using:HitomiScrollViewerLib.Entities"
     xmlns:dtss="using:HitomiScrollViewerLib.DataTemplateSelectors"
     Header="{x:Bind ViewModel.Gallery.Title}"
     >
@@ -30,7 +29,7 @@
             <FlipView.ItemTemplate>
                 <DataTemplate x:DataType="vpvms:ImageCollectionPanelVM">
                     <Viewbox>
-                        <ListView ItemsSource="{x:Bind ImageInfos}"
+                        <ListView ItemsSource="{x:Bind SizeAdjustedImageInfos}"
                                   SelectionMode="None"
                                   IsItemClickEnabled="False">
                             <ListView.ItemsPanel>
@@ -42,19 +41,23 @@
                             <ListView.ItemTemplateSelector>
                                 <dtss:ImageDataTemplateSelector>
                                     <dtss:ImageDataTemplateSelector.PlayableGalleryImageTemplate>
-                                        <DataTemplate x:DataType="entities:ImageInfo">
+                                        <DataTemplate x:DataType="models:SizeAdjustedImageInfo">
                                             <WebView2 IsHitTestVisible="False"
-                                                    Loaded="WebView2_Loaded"
-                                                    CoreWebView2Initialized="WebView2_CoreWebView2Initialized"
-                                                    Tag="{x:Bind}">
+                                                      Loaded="WebView2_Loaded"
+                                                      CoreWebView2Initialized="WebView2_CoreWebView2Initialized"
+                                                      Tag="{x:Bind}"
+                                                      Width="{x:Bind Width}"
+                                                      Height="{x:Bind Height}">
                                             </WebView2>
                                         </DataTemplate>
                                     </dtss:ImageDataTemplateSelector.PlayableGalleryImageTemplate>
                                     <dtss:ImageDataTemplateSelector.GalleryImageTemplate>
-                                        <DataTemplate x:DataType="entities:ImageInfo">
-                                            <Image>
+                                        <DataTemplate x:DataType="models:SizeAdjustedImageInfo">
+                                            <Image Width="{x:Bind Width}"
+                                                   Height="{x:Bind Height}">
                                                 <Image.Source>
-                                                    <BitmapImage UriSource="{x:Bind ImageFilePath}"></BitmapImage>
+                                                    <BitmapImage UriSource="{x:Bind ImageFilePath}"
+                                                                 DecodePixelHeight="{x:Bind DecodePixelHeight}"/>
                                                 </Image.Source>
                                             </Image>
                                         </DataTemplate>
