--- a/HitomiScrollViewerLib/Views/ViewPageViews/ImageCollectionPanel.xaml
+++ b/HitomiScrollViewerLib/Views/ViewPageViews/ImageCollectionPanel.xaml
@@ -8,12 +8,12 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     xmlns:models="using:HitomiScrollViewerLib.Models"
-    xmlns:entities="using:HitomiScrollViewerLib.Entities"
     xmlns:dtss="using:HitomiScrollViewerLib.DataTemplateSelectors"
     >
     <Viewbox>
         <ListView ItemsSource="{x:Bind ViewModel.SizeAdjustedImageInfos}"
-                  SelectionMode="None" IsItemClickEnabled="False">
+                  SelectionMode="None"
+                  IsItemClickEnabled="False">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <ItemsStackPanel FlowDirection="{Binding ViewModel.CommonSettings.FlowDirectionModel.Value, ElementName=Root, Mode=OneWay}"
@@ -23,18 +23,23 @@
             <ListView.ItemTemplateSelector>
                 <dtss:ImageDataTemplateSelector>
                     <dtss:ImageDataTemplateSelector.PlayableGalleryImageTemplate>
-                        <DataTemplate x:DataType="entities:ImageInfo">
+                        <DataTemplate x:DataType="models:SizeAdjustedImageInfo">
                             <WebView2 IsHitTestVisible="False"
-                              CoreWebView2Initialized="WebView2_CoreWebView2Initialized"
-                              Tag="{x:Bind}">
+                                      Loaded="WebView2_Loaded"
+                                      CoreWebView2Initialized="WebView2_CoreWebView2Initialized"
+                                      Tag="{x:Bind}"
+                                      Width="{x:Bind Width}"
+                                      Height="{x:Bind Height}">
                             </WebView2>
                         </DataTemplate>
                     </dtss:ImageDataTemplateSelector.PlayableGalleryImageTemplate>
                     <dtss:ImageDataTemplateSelector.GalleryImageTemplate>
-                        <DataTemplate x:DataType="entities:ImageInfo">
-                            <Image>
+                        <DataTemplate x:DataType="models:SizeAdjustedImageInfo">
+                            <Image Width="{x:Bind Width}"
+                                                   Height="{x:Bind Height}">
                                 <Image.Source>
-                                    <BitmapImage UriSource="{x:Bind ImageFilePath}"></BitmapImage>
+                                    <BitmapImage UriSource="{x:Bind ImageFilePath}"
+                                                 DecodePixelHeight="{x:Bind DecodePixelHeight}"/>
                                 </Image.Source>
                             </Image>
                         </DataTemplate>
