turns out NavigationCacheMode was the problem

--- a/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
@@ -12,7 +12,7 @@
     xmlns:bpvms="using:HitomiScrollViewerLib.ViewModels.BrowsePageVMs"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    NavigationCacheMode="Required">
+    NavigationCacheMode="Enabled">
     <Grid Margin="8" RowSpacing="16">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
